# Typeflow

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DATA-LICENSE.md  LICENSE-APACHE  LICENSE-MIT  NOTICE.md  README.md  SECURITY.md  cbindgen.toml  deny.toml  eval_test.rs
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/typeclaw-cli/: Cargo.toml
crates/typeclaw-cli/config/: typeclaw.toml.template
crates/typeclaw-cli/src/: atomic.rs  config.rs  main.rs
crates/typeclaw-cli/tests/: cli_smoke.rs
crates/typeclaw-core/: Cargo.toml
crates/typeclaw-core/benches/: engine.rs
crates/typeclaw-core/data/: uk.dict.fst
crates/typeclaw-core/src/: data.rs  engine.rs  keyboard.rs  lib.rs  score.rs
crates/typeclaw-data/: Cargo.toml
crates/typeclaw-data/fixtures/toy/: corpus.txt  dictionary.txt  pack.toml
crates/typeclaw-data/src/: main.rs
crates/typeclaw-ffi/: Cargo.toml
crates/typeclaw-ffi/benches/: ffi.rs
crates/typeclaw-ffi/include/: typeclaw.h
crates/typeclaw-ffi/src/: lib.rs
crates/typeclaw-ffi/tests/: abi_smoke.rs
crates/typeclaw-host-config/: Cargo.toml
crates/typeclaw-host-config/src/: lib.rs
crates/typeflow-cli/: Cargo.toml
crates/typeflow-cli/config/: typeflow.toml.template
crates/typeflow-cli/eval/: uk-hard.tsv
crates/typeflow-cli/src/: atomic.rs  config.rs  main.rs
crates/typeflow-cli/tests/: cli_smoke.rs
crates/typeflow-core/: Cargo.toml
crates/typeflow-core/benches/: engine.rs
crates/typeflow-core/data/: en.dict.fst  ru.dict.fst  uk.dict.fst
crates/typeflow-core/src/: data.rs  engine.rs  host_config.rs  keyboard.rs  lib.rs  score.rs  types.rs
crates/typeflow-data/: Cargo.toml
crates/typeflow-data/fixtures/toy/: corpus.txt  dictionary.txt  pack.toml
crates/typeflow-data/src/: main.rs
crates/typeflow-ffi/: Cargo.toml
crates/typeflow-ffi/benches/: ffi.rs
crates/typeflow-ffi/include/: typeflow.h
crates/typeflow-ffi/src/: lib.rs
crates/typeflow-ffi/tests/: abi_smoke.rs
crates/typeflow-host-config/: Cargo.toml
crates/typeflow-host-config/src/: lib.rs
docs/: architecture.md  artifact-format.md  calibration.md  engine.md  handoff.md  host-test-matrix.md  interactive-architecture.html  invariants.md  operator-runbook.md  pack-spec.md  panic-unsafe-audit.md  privacy.md  release-verification.md  status.md
docs/examples/: ru.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: artifact_decoders.rs  ffi_events.rs
macos/: Makefile  Package.swift
macos/Resources/: Info.plist
macos/Resources/en.lproj/: InfoPlist.strings
macos/Sources/TypeClawAgent/: main.swift
macos/Sources/TypeClawKit/: Engine.swift  HostConfig.swift  KeyCodeMap.swift
macos/Sources/TypeClawSmoke/: main.swift
macos/Sources/TypeflowAgent/: main.swift
macos/Sources/TypeflowInputMethod/: CompositionOverlay.swift  CompositionRenderer.swift  InputController.swift  main.swift
macos/Sources/TypeflowKit/: Engine.swift  HostConfig.swift  KeyCodeMap.swift
macos/Sources/TypeflowRegister/: main.swift
macos/Sources/TypeflowSmoke/: main.swift
macos/TypeClawFFI/include/: module.modulemap  typeclaw_shim.h
macos/TypeflowFFI/include/: module.modulemap  typeflow_shim.h
macos/scripts/: package-universal.sh
scripts/: typeclaw-bundle-version.sh  typeclaw-version.sh  typeflow-bundle-version.sh  typeflow-version.sh  verify-release-version.sh
