[workspace]
members = [
    "crates/typeflow-core",
    "crates/typeflow-data",
    "crates/typeflow-ffi",
    "crates/typeflow-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nnnickg/typeflow"
homepage = "https://github.com/nnnickg/typeflow"
