[package]
name = "typeclaw-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
typeclaw-core.workspace = true
typeclaw-host-config.workspace = true

[lints]
workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "ffi"
harness = false
