[package]
name = "typeflow-cli"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "typeflow"
path = "src/main.rs"

[dependencies]
typeflow-core = { version = "0.0.1", path = "../typeflow-core" }
typeflow-host-config = { version = "0.0.1", path = "../typeflow-host-config" }
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context"] }
crossterm = "0.29.0"
fst = "0.4.7"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
