[package]
name = "typeflow-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "3.0"
fst = "0.4"
toml = "0.8"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "engine"
harness = false
