[package]
name = "typeflow-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
fst = "0.4.7"
toml = "1.1.2"

[lints]
workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "engine"
harness = false
