[package]
name = "typeflow-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
typeflow-core = { path = "../typeflow-core" }
ureq = "3"
flate2 = "1"
fst = "0.4"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
toml = "0.8"
