[package]
name = "typeflow-data"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
typeflow-core = { version = "0.0.1", path = "../typeflow-core" }
ureq = "3.3.0"
flate2 = "1.1.9"
fst = "0.4.7"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
toml = "1.1.2"

[lints]
workspace = true
