[package]
name = "typeflow-data"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
typeflow-core.workspace = true
ureq = "3.3.0"
flate2 = "1.1.9"
fst = "0.4.7"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
toml = "1.1.2"

[lints]
workspace = true
