[package]
name = "typeflow-ffi"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
typeflow-core = { version = "0.0.1", path = "../typeflow-core" }
typeflow-host-config = { version = "0.0.1", path = "../typeflow-host-config" }

[lints]
workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "ffi"
harness = false
