[package]
name = "typeflow-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
typeflow-core = { path = "../typeflow-core" }
typeflow-host-config = { path = "../typeflow-host-config" }

[lints]
workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "ffi"
harness = false
