[package]
name = "typeflow-host-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
typeflow-core = { path = "../typeflow-core" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[lints]
workspace = true
